# Academic-Projects

./: duzenle.php  index.html  index.php  kayitlar.php  png.2  sil.php  style.css
Hastane-No-Show/: PROJE_RAPORU.docx
Hastane-No-Show/.claude/: settings.local.json
Isletim_Sistemi/.claude/: settings.local.json
Mert Studio Code v2/.claude/: settings.local.json
Mert Studio Code v2/doruk/: BUILD.md  CMakeLists.txt  derle.bat  ornek.drk
Mert Studio Code v2/doruk-ide/: MertStudioCode.vbs  check-syntax.js  create-shortcut.ps1  kur-ve-calistir.bat  main.js  package-lock.json  package.json  preload.js
Mert Studio Code v2/doruk-ide/renderer/: app.js  doruk-lang.js  index.html  style.css  themes.js
Mert Studio Code v2/doruk/build_cli/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  doruk.slnx  doruk.vcxproj  doruk.vcxproj.filters  doruk_engine.vcxproj  doruk_engine.vcxproj.filters  test_interpreter-b12d07c_include.cmake  test_interpreter.vcxproj  test_interpreter.vcxproj.filters  test_lexer-b12d07c_include.cmake  test_lexer.vcxproj  test_lexer.vcxproj.filters  test_parser-b12d07c_include.cmake  test_parser.vcxproj  test_parser.vcxproj.filters
Mert Studio Code v2/doruk/build_cli/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
Mert Studio Code v2/doruk/build_cli/doruk.dir/Debug/: doruk.exe.recipe
Mert Studio Code v2/doruk/build_cli/doruk.dir/Debug/doruk.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Mert Studio Code v2/doruk/build_cli/doruk.dir/Release/: doruk.exe.recipe
Mert Studio Code v2/doruk/build_cli/doruk.dir/Release/doruk.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Mert Studio Code v2/doruk/build_cli/doruk_engine.dir/Debug/: doruk_engine.lib.recipe
Mert Studio Code v2/doruk/build_cli/doruk_engine.dir/Debug/doruk_engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  doruk_engine.lastbuildstate
Mert Studio Code v2/doruk/build_cli/doruk_engine.dir/Release/: doruk_engine.lib.recipe
Mert Studio Code v2/doruk/build_cli/doruk_engine.dir/Release/doruk_engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Mert Studio Code v2/doruk/build_cli/ide/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  doruk_ide.vcxproj  doruk_ide.vcxproj.filters
Mert Studio Code v2/doruk/build_cli/ide/doruk_ide.dir/Debug/: doruk_ide.exe.recipe
Mert Studio Code v2/doruk/build_cli/ide/doruk_ide.dir/Debug/doruk_ide.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  doruk_ide.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Mert Studio Code v2/doruk/build_cli/ide/doruk_ide_autogen/: mocs_compilation_Debug.cpp
Mert Studio Code v2/doruk/build_cli/ide/doruk_ide_autogen/include_Debug/6YEA5652QU/: moc_CodeEditor.cpp  moc_CodeEditor.cpp.d  moc_CustomDialogs.cpp  moc_CustomDialogs.cpp.d  moc_DorukHighlighter.cpp  moc_DorukHighlighter.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_MinimapWidget.cpp  moc_MinimapWidget.cpp.d  moc_RunnerThread.cpp  moc_RunnerThread.cpp.d
Mert Studio Code v2/doruk/build_cli/test_lexer.dir/Debug/test_lexer.tlog/: CustomBuild.read.1.tlog
Mert Studio Code v2/doruk/build_cli/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Mert Studio Code v2/doruk/build_cli/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate
Mert Studio Code v2/doruk/cli/: main.cpp
Mert Studio Code v2/doruk/engine/include/: AST.h  Diagnostics.h  Environment.h  Interpreter.h  Lexer.h  Parser.h  SemanticAnalyzer.h  Surum.h.in  Token.h  Value.h
Mert Studio Code v2/doruk/engine/src/: AST.cpp  Diagnostics.cpp  Environment.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  SemanticAnalyzer.cpp  Token.cpp  Value.cpp
Mert Studio Code v2/doruk/ide/: CMakeLists.txt
Mert Studio Code v2/doruk/ide/include/: CodeEditor.h  CustomDialogs.h  DorukHighlighter.h  MainWindow.h  MinimapWidget.h  RunnerThread.h  ThemeManager.h
Mert Studio Code v2/doruk/ide/src/: CodeEditor.cpp  CustomDialogs.cpp  DorukHighlighter.cpp  MainWindow.cpp  MainWindowRun.cpp  MinimapWidget.cpp  RunnerThread.cpp  ThemeManager.cpp
Mert Studio Code v2/doruk/tests/: test_interpreter.cpp  test_lexer.cpp  test_parser.cpp
Mert-Studio-Code/: README.md
web-sitesi/: png.4  script.js
